tests/qd/compile_errors/file_not_found.qd
// Test error message for missing file
use "nonexistent.qd"

fn main( -- ) {
	42 prints nl
}
